...
      }
    }
  }

  static const _crsOptions = [
    'UTM Zone 50S',
    'UTM Zone 51S',
    'UTM Zone 52S',
    'UTM Zone 50N',
    'UTM Zone 51N',
    'UTM Zone 52N',
  ];

...
    '1st Order',
    '2nd Order',
    '3rd Order',
    '4th Order',
  ];

  static const _statusOptions = ['active', 'destroyed', 'replaced'];

  @override
  Widget build(BuildContext context) {
    final theme = FTheme.of(context);

    return BlocConsumer<BenchmarkBloc, BenchmarkState>(
...
          isBusy: false,
          onDismissApproved: _handleClose,
          footer: SizedBox(
            width: double.infinity,
            child: FButton(
              onPress: () => _validateAndSubmit(context),
              child: const Text('Simpan Benchmark'),
            ),
          ),
          body: FormMaxWidth(
            child: Form(
              key: _formKey,
              child: Padding(
...
                            ),
                            const SizedBox(height: 16),
                            CreatableCombobox<String>(
                              items: _crsOptions,
                              labelBuilder: (crs) => crs,
                              label: 'CRS / Datum',
                              hint: 'Pilih sistem proyeksi...',
                              initialValue: form.crsIdentifier,
                              onChanged: (val) {
                                context.read<BenchmarkBloc>().add(
                                  FormCrsChanged(val),
                                );
                              },
...
                            ),
                            const SizedBox(height: 16),
                            CreatableCombobox<String>(
                              items: _statusOptions,
                              labelBuilder: (status) => status,
                              label: 'Status',
                              hint: 'Pilih Status...',
                              initialValue: form.status,
                              onChanged: (val) {
                                context.read<BenchmarkBloc>().add(
                                  FormStatusChanged(val),
                                );
                              },
...
