...
  final IconData icon;

  const WeatherOption(this.label, this.icon);
}

const List<WeatherOption> kWeatherOptions = [
  WeatherOption('Cerah', LucideIcons.sun),
  WeatherOption('Berawan', LucideIcons.cloud),
  WeatherOption('Hujan Ringan', LucideIcons.cloudDrizzle),
  WeatherOption('Hujan Deras', LucideIcons.cloudRainWind),
  WeatherOption('Badai / Extreme', LucideIcons.cloudLightning),
];

...
